# app_finance_reports

./: .gitignore  README.md  pyproject.toml
client/: .env  middleware.ts  package-lock.json  package.json
client/app/: globals.css
client/app/(auth)/(routes)/: layout.tsx
client/app/(dashboard)/: layout.tsx
client/app/(dashboard)/(routes)/clientes/: page.tsx
client/app/(dashboard)/(routes)/compras/: page.tsx
client/app/(dashboard)/(routes)/dashboard/: page.tsx
client/app/(dashboard)/(routes)/financieros/: page.tsx
client/app/(dashboard)/(routes)/ventas/: page.tsx
client/app/(landing)/: page.tsx
client/components/: heading.tsx  mobile-sidebar.tsx  navbar.tsx  sidebar.tsx
core/: db.sqlite3
core/api/: models.py
core/api/migrations/: 0001_initial.py
core/core/: settings.py  urls.py
