[tool.poetry]
name = "api-test"
version = "0.1.0"
description = "pry"
authors = ["claudio"]
license = "MIT"
readme = "README.md"
packages = [{include = "api_test"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
djangorestframework = "^3.14.0"
mysqlclient = "^2.2.0"
pandas = "^2.0.3"
django-cors-headers = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
